# dagger

./: .coverage  .coveragerc  .flake8  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  PRINCIPLES.rst  README.md  README.rst  codecov.yml  dagger_test.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ipynb
.github/workflows/: publish-python.yml  python-package.yml
dagger/: __init__.py  _version.py  acc_calibration.py  altitude.py  analog.py  attitude.py  connect.py  control.py  mag_calibration.py  raw_imu.py  sensor.py  set_attitude.py  set_command.py  set_raw_rc.py  show.hex  utils.py
docs/: conf.py  index.rst  introduction.rst  principles.rst  requirements.txt
tests/: .coverage  conftest.py  test_acc_calibration.py  test_connect.py  test_control.py  test_mag_calibration.py  test_sensor.py  test_set_commad.py  test_set_raw_rc.py  test_skeleton.py  test_utils.py
tutorials/: dagger_example.ipynb
