[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[project]
name = "pluto-dagger"
version = "0.0.1"
authors = [
    {name = 'Nagesh Bansal', email = 'nageshbansal59@gmail.com'},
    {name='Rohith Varma Buddaraju', email = 'rohith.varma.buddaraju@gmail.com'},
    {name ='Pratham Kumar Shrivastava', email = 'prathamks.email@gmail.com'}
]
description = "A Python Wrapper for Pluto Drone Controller"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rohithvarma3000/dagger/"
"Bug Tracker" = "https://github.com/rohithvarma3000/dagger/issues"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.rst" = [
    "{version}",
    "{pep440_version}",
]

"dagger/_version.py" = ["{version}"]

